test/TestPhases/typechecker/valid/ActivityReturn.blc
module ActivityReturn

activity calc() returns int32
    cobegin
        await true
    with weak
        await false
    end
    return 0
end

activity main ()()
    var x: int64
    x = run calc()
end
