test/TestPhases/typechecker/invalid/runAssignLet.blc
activity rrr(a: bool) returns int8
    await true
    return 5
end

@[EntryPoint]
activity start ()()
    
    let myS: int8 = 0
    run myS = rrr(false)

end